[workspace]
members = ["config_def", "config_def_macros"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/easy-config"
homepage = "https://github.com/volodymyrd/easy-config"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
easy-config-macros = { path = "config_def_macros" }
indexmap = "2"
once_cell = "1.21.3"
thiserror = "2.0.17"
