[workspace]
members = ["config_def", "config_def_macros"]

resolver = "2"

[workspace.package]
version = "0.1.3"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/easy-config"
homepage = "https://github.com/volodymyrd/easy-config"
license = "Apache-2.0"
edition = "2024"
description = "A Rust library for defining and validating application configurations, inspired by Apache Kafka's ConfigDef"

[workspace.dependencies]
easy-config-macros = { path = "config_def_macros", version = "0.1.3" }
indexmap = "2"
once_cell = "1"
thiserror = "2"
