[package]
name = "easy-config-def"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
description = "A Rust library for defining and validating application configurations, inspired by Apache Kafka's ConfigDef"

[dependencies]
easy-config-macros = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
